# vieclammienbac

./: README.md
core/: Cargo.toml
core/migrations/: 001_create_accounts.sql  002_create_blog.sql  003_create_manifest.sql
core/src/: auth.rs  lib.rs
core/src/middleware/: admin.rs  mod.rs  user.rs
core/src/postgres/: media.rs  migrator.rs  mod.rs
core/src/postgres/models/: meta.rs  mod.rs
core/src/postgres/models/accounts/: media_assets.rs  mod.rs  roles.rs  user_roles.rs  users.rs
core/src/postgres/models/blog/: job_location.rs  jobs.rs  mod.rs  news.rs
core/src/utils/: mail.rs  mod.rs  pairkey.rs  password.rs  redis.rs  token.rs
drive/: Cargo.toml
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/app/assets/: main.css
frontend/app/components/: AppNavbar.vue
frontend/app/composables/: useVideoThumbnail.js
frontend/app/layouts/: default.vue  withoutheader.vue
frontend/app/pages/: commitment-to-confidentiality.vue  index.vue  login.vue
frontend/app/stores/: geo.js
frontend/public/: robots.txt  sitemap.xml
frontend/public/tools/: convert_xsls.html  drive.html  index.html  new_convert_xsls.html  taxpayer.html
frontned/: README.md  error.vue  package-lock.json  package.json
frontned/assets/css/: main.css
frontned/components/: AppNavbar.vue  RollContainer.vue
frontned/composables/: useVideoThumbnail.js
frontned/layouts/: admin.vue  default.vue
frontned/pages/: commitment-to-confidentiality.vue  index.vue  qr-redirect.vue
frontned/stores/: geo.js
main_backend/: Cargo.toml
main_backend/src/: main.rs
main_backend/src/endpoints/: jobs.rs  mod.rs  news.rs  profile.rs
meta/: Cargo.toml
meta/src/: endpoints.rs  main.rs
vieclammienbac_frontend/: nuxt.config.ts
vieclammienbac_frontend/components/: AppFooter.vue
vieclammienbac_frontend/middleware/: auth.ts
vieclammienbac_frontend/pages/: contact.vue  login.vue  profile.vue  register.vue
vieclammienbac_frontend/plugins/: plyr.client.js
(+77 files in other folders)
