[package]
name = "vmb_core"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["chrono", "derive", "postgres", "runtime-tokio", "uuid"] }

async-trait = "0.1.89"


tokio = { version = "1.50.0", features = ["full"] }
actix-web = "4.13.0"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

futures = "0.3.32"


argon2 = "0.5.3"
password-hash = "0.6.0"
rand = "0.10.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
sha2 = "0.10.9"
hmac = "0.12.1"

lettre = "0.11.19"

thiserror = "2.0.18"
tracing = "0.1.44"
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = "0.3.32"
p256 = "0.13.2"

deadpool-redis = "0.23.0"
